# maturin-2664

./: Cargo.toml  README.md
.github/workflows/: CI.yml
host/: Cargo.toml  pyproject.toml
host/src/: lib.rs
